kubernetes/apps/pitower/monitoring/grafana-operator/instance/image-renderer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-operator-image-renderer
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana-operator-image-renderer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-operator-image-renderer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana-operator-image-renderer
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 472
        runAsGroup: 472
      containers:
        - name: image-renderer
          image: docker.io/grafana/grafana-image-renderer:v5.12.6
          ports:
            - name: http
              containerPort: 8081
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-operator-image-renderer
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana-operator-image-renderer
spec:
  selector:
    app.kubernetes.io/name: grafana-operator-image-renderer
  ports:
    - name: http
      port: 8081
      targetPort: http
